# AbstractResourceAttack

./: CMakeLists.txt  Hello.cpp  README.md  Resourceanalysis.cpp  cmp-finder.py  out_cpm_finder.txt  test.sh
AbstractResourceDos/: CMakeLists.txt  CtlTableAnalysis.cpp  CtlTableAnalysis.h  FindLockAndAtomic.cpp  FindLockAndAtomic.h  LockAtomicStructure.cpp  LockAtomicStructure.h  LockPair.cpp  LockPair.h  PexCallGraph.cpp  PexCallGraph.h  ResourceCollectPass.cpp  ResourceCollectPass.h  Utils.cpp  Utils.h
AbstractResourceDos/gatlin/: gatlin.cpp
AbstractResourceDos/gatlin/include/: StructCFI.h  commontypes.h  gatlin_idcs.h
Flask/: .gitignore  README.md  out_cpm_finder.txt
Flask/ResConfine/: flask.py  monitor.py
Flask/ResConfine/monitors/: monitor_inc_mixhash.c  monitor_inc_pcarray.c
Flask/ResConfine/utils/: extract  extract_cgid.c  extract_cgid.py
Flask/ResConfineCPP/: CMakeLists.back.txt  CMakeLists.txt  flask.cpp
Flask/ResConfineCPP/includes/: cxxopts.hpp  defences.hpp  extract_cgid.hpp  monitor_proc.hpp  monitor_ra.hpp  mybench.hpp  resources.hpp  simple_events.hpp
Flask/ResConfineCPP/monitors/: monitor_proc.ebpf.c  monitor_ra.ebpf.c
Flask/ResConfineCPP/utils/: extract_cgid.cpp  monitor_proc.cpp  monitor_ra.cpp
Flask/scripts/: analyze_lmbench.py  analyze_tree.py  analyze_unixbench.py  auto_lmbench.py  auto_unixbench.py
